thêm phần title chapter cho book detail